<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChooseStageActivity">

    <TextView
        android:id="@+id/ChooseStage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/choose_stage"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ChooseStageScrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/ChooseStageScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/ChooseStage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Stage1Button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/stage1"
                android:textSize="24sp"
                app:rippleColor="@color/darker_blue" />

            <Button
                android:id="@+id/Stage2Button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/stage2"
                android:textSize="24sp"
                app:rippleColor="@color/darker_blue" />

            <Button
                android:id="@+id/Stage3Button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/stage3"
                android:textSize="24sp"
                app:rippleColor="@color/darker_blue" />

            <Button
                android:id="@+id/Stage4Button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/stage4"
                android:textSize="24sp"
                app:rippleColor="@color/darker_blue" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/CSBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:padding="15dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChooseStageScrollView"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>