<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/LoginScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rallycar4"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/dark_blue"
        android:scrollbarTrackVertical="@color/grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WelcomeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="Welcome to the NZRC Time Card App"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PromptTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="Choose Position:"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/darker_yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/Chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/CompChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/competitor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:chipBackgroundColor="@color/chip_bg"
                    app:chipStrokeColor="@color/black"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/CrewChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timingCrew"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:chipBackgroundColor="@color/chip_bg"
                    app:chipStrokeColor="@color/black"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/AdminChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:chipBackgroundColor="@color/chip_bg"
                    app:chipStrokeColor="@color/black"
                    app:chipStrokeWidth="2dp" />
            </com.google.android.material.chip.ChipGroup>

            <EditText
                android:id="@+id/UsernameET"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="Enter Username"
                android:inputType="text" />

            <EditText
                android:id="@+id/PasswordET"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="Enter Password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/yellow"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>